# boardom_buster

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TO DO.txt  app.py  docker-compose.yml  other.ipynb  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml
config/: settings.yaml
notebooks/: categories.ipynb  mechanics.ipynb  minmax_players.ipynb  num_ratings.ipynb
src/: config.py
src/app/: dependencies.py  main.py  schemas.py
src/app/routes/: __init__.py  ingest.py  recommend.py
src/etl/consolidation/: consolidation.py
src/etl/consolidation/abstract/: base_transformation.py  transformations.py
src/etl/ingestion/: bgg.py
src/ml/: __init__.py  knn.py  recommender.py  reranker.py
src/other/: parser.py
src/other/abstract/: base_write_reader.py  parquet_write_reader.py  write_reader_factory.py
static/css/: styles.css
static/js/: app.js
static/templates/: index.html
tests/: __init__.py
tests/app/: __init__.py  test_dependencies.py  test_main.py  test_schemas.py
tests/app/routes/: __init__.py  test_ingest.py  test_recommend.py
tests/etl/: __init__.py
tests/etl/consolidation/: __init__.py
tests/etl/consolidation/abstract/: __init__.py  test_base_transformation.py  test_transformations.py
tests/ml/: __init__.py  test_knn.py  test_recommender.py  test_reranker.py
